p44wiper-config: more renames and references to project name

--- a/p44wiper-config/files/www/index.html
+++ b/p44wiper-config/files/www/index.html
@@ -13,7 +13,7 @@
     <script src="js/jquery-1.9.1.min.js"></script>
     <script src="js/jquery.mobile-1.3.2.min.js"></script>
 
-    <title id="html_title_model">DSB</title>
+    <title id="html_title_model">P44WIPER</title>
 
     <style type="text/css"><!--
       h1 { font-family:Helvetica; font-size:42pt; }
