p44wiper-config: Web-UI: credits not only to OpenWrt, but also LEDE

--- a/p44wiper-config/files/www/index.html
+++ b/p44wiper-config/files/www/index.html
@@ -325,11 +325,11 @@
           data-iconpos="right">
 
             <div id="opensource_openwrt" style="display:none" data-role="collapsible">
-              <h3>OpenWrt - © OpenWrt Project, GPL v2</h3>
+              <h3>OpenWrt/LEDE - © OpenWrt/LEDE Project, GPL v2</h3>
 
-              <h4><a href="http://openwrt.org" target="_blank">OpenWrt</a> -  Linux distribution for embedded devices</h4>
+              <h4><a href="http://openwrt.org" target="_blank">OpenWrt/LEDE</a> -  Linux distribution for embedded devices</h4>
 
-              <p>OpenWrt is free software: you can redistribute it and/or modify
+              <p>OpenWrt/LEDE is free software: you can redistribute it and/or modify
               it under the terms of the GNU General Public License as published by
               the Free Software Foundation, version 2 of the License.</p>
 
@@ -570,7 +570,6 @@
         </div>
       </div>
     </div>
-
 
 
   </body>
